2022-07-15  Noah Sanci  <nsanci@redhat.com>

	* debuginfod-client.c (header_callback): Handle headers without
	X-DEBUGINFOD prefix.
	(debuginfod_query_server): Removed verbose printing headers when
	undesired.
	(debuginfod_get_headers): Created.
	* debuginfod-find.c (main): Verboes printing headers.
	* debuginfod.cxx (handle_buildid): Add headers prefixed with
	X-DEBUGINFOD from federated servers to this server's response
	headers.
	* debuginfod.h.in (debuginfod_get_headers): Created.
	* libdebuginfod.map: New elfutils version added.

2022-09-02  Aaron Merey  <amerey@redhat.com>

	* debuginfod.cxx (parse_opt): If '-C' is given with no arg, do not
	update connection_pool since it will be done at a later point.
	(main): Use auto-sized connection_pool if '-C' isn't given with an
	arg. Do not use MHD_USE_THREAD_PER_CONNECTION.

2022-08-17  Martin Liska  <mliska@suse.cz>

	* debuginfod.cxx (handle_buildid): Update HTTP statistics only if
	it comes from HTTP request.

2022-08-17  Martin Liska  <mliska@suse.cz>

	* debuginfod.cxx: Print filename for "cannot open archive".

2022-08-15  Frank Ch. Eigler <fche@redhat.com>

	PR29474
	* debuginfod.cxx (handle_buildid_r_match): Don't trigger false-404's
	for concurrently prefetched target files.

2022-08-02  Josef Cejka <jcejka@suse.de>

	* debuginfod.cxx (groom): Don't evaluate regex unless needed.

2022-07-29  Josef Cejka <jcejka@suse.de>

	* debuginfod.cxx: Create db indexes for fast delete while grooming.

2022-06-03  Michael Trapp <michael.trapp@sap.com>

	* debuginfod.cxx (scan_source_info): New global.
	(parse_opt, elf_classify): Use it.

2022-05-09  Mark Wielaard  <mark@klomp.org>

	* debuginfod-client.c (debuginfod_clean_cache): Move utime call to
	before fts traversal.

2022-05-09  Mark Wielaard  <mark@klomp.org>

	* debuginfod-client.c (debuginfod_init_cache): Remove.
	(debuginfod_query_server): Don't call debuginfod_init_cache, call
	mkdir then debuginfod_clean_cache.

2022-05-09  Mark Wielaard  <mark@klomp.org>
